<resources>
    <string name="app_name">"Hello World" Across the World</string>
    <string name="action_settings">Settings</string>
    <string name="eng">English</string>
    <string name="spa">Spanish</string>
    <string name="frn">French</string>
    <string name="swd">Swedish</string>
    <string name="pol">Polish</string>
    <string name="eng_txt">Hello World!</string>
    <string name="spa_txt">Hola Mundo!</string>
    <string name="frn_txt">Bonjour le Monde!</string>
    <string name="swd_txt">Hej världen!</string>
    <string name="pol_txt">Witaj świecie!</string>
</resources>
